fixing issue where the right hand side of step2 of affordability is not always visible

--- a/app/assets/stylesheets/mortgage_calculator/components/_mortgagecalc.scss
+++ b/app/assets/stylesheets/mortgage_calculator/components/_mortgagecalc.scss
@@ -93,6 +93,14 @@
   font-size: px(40);
 }
 
+@media (max-width: 425px){
+  .mortgagecalc__submit{
+    max-width: 250px;
+    white-space: normal
+  }
+
+}
+
 .mortgagecalc__submit {
   float:right;
   margin-bottom: 24px;
